k8s-operator/config/integrations/vllm-gemma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-gemma
spec:
  selector:
    app: vllm-gemma
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: http
      name: http
